force-app/main/default/objects/Joke__c/Joke__c.object-meta.xml
<CustomObject>
    <description>Jokes from the https://icanhazdadjoke.com/</description>
    <label>Joke</label>
    <nameField>
        <displayFormat>J-{00000}</displayFormat>
        <label>Joke Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jokes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>