force-app/main/default/objects/Joke__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <formula>Joke_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Id</label>
    <type>Text</type>
</CustomField>