force-app/main/default/objects/Joke__c/fields/Joke__c.field-meta.xml
<CustomField>
    <fullName>Joke__c</fullName>
    <label>Joke</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>