force-app/main/default/objects/Joke__c/fields/Joke_Id__c.field-meta.xml
<CustomField>
    <fullName>Joke_Id__c</fullName>
    <externalId>true</externalId>
    <label>Joke Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>